test/sema/negative/trait_impls5.output
trait_impls5.impala:4 col 1 - 17: error: duplicated implementation of trait 'T'
